--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Donny Hardyanto",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "atob": "^2.1.2"
   }
